--- a/T52.html
+++ b/T52.html
@@ -1,4 +1,4 @@
-<!-- The full HTML document for the TOOLZO website, now with animated splash screen, improved image handling, and mobile responsiveness -->
+<!-- The full HTML document for the TOOLZO website, adjusted for online hosting via GitHub Pages. All external assets are now from reliable public sources. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -527,7 +527,7 @@
             </div>
         </section>
 
-        <!-- Contact Section - Updated -->
+        <!-- Contact Section - Updated with public image sources -->
         <section id="contact-section" class="py-16 md:py-24 bg-gray-900 hidden">
             <div class="container mx-auto px-4 md:px-8 text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-8 text-purple-400">
@@ -536,8 +536,8 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                     <!-- Team Member 1 -->
                     <div class="tool-card bg-gray-800 rounded-2xl p-8 shadow-xl border border-gray-700">
-                        <!-- Updated image source to use a reliable placeholder -->
-                        <img src="https://placehold.co/128x128/9d50bb/ffffff?text=IE" onerror="this.src='https://placehold.co/128x128/9d50bb/ffffff?text=IE'" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
+                        <!-- Publicly hosted image for Ibrahim Elhusseiny -->
+                        <img src="https://placehold.co/128x128/9d50bb/ffffff?text=IE" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
                         <h3 class="text-xl font-semibold mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-500">Ibrahim Elhusseiny</h3>
                         <p class="text-gray-400 text-sm mb-4">Ibrahimelhusseiny@gmail.com</p>
                         <p class="text-gray-300 text-md">
@@ -547,8 +547,8 @@
 
                     <!-- Team Member 2 -->
                     <div class="tool-card bg-gray-800 rounded-2xl p-8 shadow-xl border border-gray-700">
-                        <!-- Updated image source to use a reliable placeholder -->
-                        <img src="https://placehold.co/128x128/61045f/ffffff?text=FS" onerror="this.src='https://placehold.co/128x128/61045f/ffffff?text=FS'" alt="Farida Salama" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
+                        <!-- Publicly hosted image for Farida Salama -->
+                        <img src="https://placehold.co/128x128/61045f/ffffff?text=FS" alt="Farida Salama" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
                         <h3 class="text-xl font-semibold mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-500">Farida Salama</h3>
                         <p class="text-gray-400 text-sm mb-4">Salamaahmedfarida@gmail.com</p>
                         <p class="text-gray-300 text-md">
@@ -558,8 +558,8 @@
 
                     <!-- Team Member 3 -->
                     <div class="tool-card bg-gray-800 rounded-2xl p-8 shadow-xl border border-gray-700">
-                        <!-- Updated image source to use a reliable placeholder -->
-                        <img src="https://placehold.co/128x128/2b5876/ffffff?text=GS" onerror="this.src='https://placehold.co/128x128/2b5876/ffffff?text=GS'" alt="Galaluddin Shahin" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
+                        <!-- Publicly hosted image for Galaluddin Shahin -->
+                        <img src="https://placehold.co/128x128/2b5876/ffffff?text=GS" alt="Galaluddin Shahin" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
                         <h3 class="text-xl font-semibold mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-500">Galaluddin Shahin</h3>
                         <p class="text-gray-400 text-sm mb-4">GalaluddinShahin@gmail.com</p>
                         <p class="text-gray-300 text-md">
