--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!-- The full HTML document for the TOOLZO website, adjusted for online hosting via GitHub Pages. All external assets are now from reliable public sources. -->
+<!-- The full HTML document for the TOOLZO website, adjusted for online hosting via GitHub Pages and Vercel. All external assets are now from reliable public sources. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
