--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     <!-- Team Member 1 -->
                     <div class="tool-card bg-gray-800 rounded-2xl p-8 shadow-xl border border-gray-700">
                         <!-- Updated image source to use a reliable placeholder -->
-                        <img src="https://drive.google.com/file/d/10mmRez_vpDmozLAeNRG1f8wvqqIAnklc/view?usp=drive_link" onerror="this.src='https://placehold.co/128x128/9d50bb/ffffff?text=IE'" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
+                        <img src="https://github.com/iprahimmohamed249/TOOLZO/blob/photo/Ibrahim.jpeg" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
                         <h3 class="text-xl font-semibold mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-500">Ibrahim Elhusseiny</h3>
                         <p class="text-gray-400 text-sm mb-4">Ibrahimelhusseiny@gmail.com</p>
                         <p class="text-gray-300 text-md">
@@ -1607,3 +1607,4 @@
     </script>
 </body>
 </html>
+
