--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     <!-- Team Member 1 -->
                     <div class="tool-card bg-gray-800 rounded-2xl p-8 shadow-xl border border-gray-700">
                         <!-- Updated image source to use a reliable placeholder -->
-                        <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/ibrahim-elhusseiny.jpg" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
+                        <img src="https://github.com/iprahimmohamed249/TOOLZO/blob/main/Ibrahim.jpeg" alt="Ibrahim Elhusseiny" class="w-32 h-32 mx-auto rounded-full object-cover mb-4">
                         <p class="text-gray-400 text-sm mb-4">Ibrahimelhusseiny@gmail.com</p>
                         <p class="text-gray-300 text-md">
                             A highly skilled developer who led the front-end implementation and user interface design of the platform.
@@ -1606,5 +1606,6 @@
     </script>
 </body>
 </html>
+
 
 
